<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_get_started"
        tools:context=".getstarted.GetStartedFragment">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/band_text"
            style="@style/GetStartedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/brand_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/slogan_primary_text"
            style="@style/GetStartedText"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/slogan_primary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/band_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/slogan_secondary_text"
            style="@style/GetStartedText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/slogan_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan_primary_text" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/get_started_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan_secondary_text"
            app:layout_constraintVertical_bias="0.839"
            app:srcCompat="@drawable/ic_get_started" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_started_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_get_started_custom"
            android:text="@string/btn_get_started"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>